[package]
name = "rpow2-authorized-miner"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "rpow2_authorized_miner"
path = "src/bin/rpow2_authorized_miner.rs"

[[bin]]
name = "local_pow_bench"
path = "src/bin/local_pow_bench.rs"

[lib]
name = "rpow2_authorized_miner"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
